# deep-research-agent

./: .env.example  README.md  pyproject.toml
deep_research/: __init__.py  deep_research.py  email_agent.py  evaluator.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
